[refactoring] simplify collection creation